--- a/front-page/covid.html
+++ b/front-page/covid.html
@@ -66,7 +66,7 @@
         </div>
         <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="covid.html"><i class="fas fa-home fa-3x" style="color:#fddb3a;"></i></a>
+        <a class="nav-link" href="../LatestWebsite/index.html"><i class="fas fa-home fa-3x" style="color:#fddb3a;"></i></a>
       </li>
 
       <li class="nav-item">
@@ -75,7 +75,7 @@
 
 
         <li class="nav-item">
-          <a class="nav-link" href="covid.html">  <i class="far fa-user-circle fa-3x" style="color:#fddb3a;"></i></i></a>
+          <a class="nav-link" href="../newlogin.html">  <i class="far fa-user-circle fa-3x" style="color:#fddb3a;"></i></i></a>
         </li>
 
     </ul>
